--- a/public/potree_libs/potree/sidebar.html
+++ b/public/potree_libs/potree/sidebar.html
@@ -60,10 +60,6 @@
 					<li><span data-i18n="appearance.min_node_size"></span>: <span id="lblMinNodeSize"></span>
 						<div id="sldMinNodeSize"></div>
 					</li>
-					<li><label><input id="show_bounding_box" type="checkbox" /><span
-								data-i18n="appearance.box"></span></label></li>
-					<li><label><input id="set_freeze" type="checkbox" /><span
-								data-i18n="appearance.freeze"></span></label></li>
 				</ul>
 
 			</div>
@@ -121,10 +117,6 @@
 				<div class="divider"><span>Objects</span></div>
 
 				<div id="scene_objects"></div>
-
-				<div class="divider"><span>Properties</span></div>
-
-				<div id="scene_object_properties"></div>
 			</div>
 
 			<!-- Classification -->
@@ -158,7 +150,7 @@
 					</ul>
 				</div>
 
-				<div class="divider"><span>GPS Time</span></div>
+				<!-- <div class="divider"><span>GPS Time</span></div>
 
 				<div id="gpstime_filter_panel">
 
@@ -177,7 +169,7 @@
 
 					</ul>
 
-				</div>
+				</div> -->
 			</div>
 
 			<!-- ABOUT -->
