adding a tour to potree sidebar

--- a/public/potree_libs/potree/sidebar.html
+++ b/public/potree_libs/potree/sidebar.html
@@ -5,12 +5,12 @@
 			<a href="http://potree.org" target="_blank">potree.org</a> 
 			<span style="margin: 0px 3px; color: #9AA1A4"> - </span> 
 			<a href="https://github.com/potree/potree" target="_blank">github</a>
-			<span style="margin: 0px 3px; color: #9AA1A4"> - </span> 
+			<!-- <span style="margin: 0px 3px; color: #9AA1A4"> - </span> 
 			<a href="https://twitter.com/m_schuetz" target="_blank">twitter</a>
 			<span style="flex-grow: 1"></span>
-			<span id="potree_version_number" style="color: #9AA1A4; font-size: 80%; font-weight: 100"></span>
+			<span id="potree_version_number" style="color: #9AA1A4; font-size: 80%; font-weight: 100"></span> -->
 		</span>
-		<div id="potree_languages" style="font-family:arial;"></div>
+		<!-- <div id="potree_languages" style="font-family:arial;"></div> -->
 	</div>
 	<div> 
 
@@ -18,7 +18,7 @@
 
 		
 		<!-- APPEARANCE -->
-		<h3 id="menu_appearance"><span data-i18n="tb.rendering_opt"></span></h3>
+		<h3 id="menu_appearance" data-tut="tenth-step"><span data-i18n="tb.rendering_opt" ></span></h3>
 		<div>
 			<ul class="pv-menu-list">
 				<li><span data-i18n="appearance.nb_max_pts"></span>: <span id="lblPointBudget"></span> <div id="sldPointBudget"></div></li>
@@ -60,7 +60,7 @@
 		</div>
 		
 		<!-- TOOLS -->
-		<h3 id="menu_tools"><span data-i18n="tb.tools_opt"></span></h3>
+		<h3 id="menu_tools" data-tut="eleventh-step"><span data-i18n="tb.tools_opt"></span></h3>
 		<div class="pv-menu-list">
 
 			<div class="divider"><span>Measurement</span></div>
@@ -102,7 +102,7 @@
 		</div>
 
 		<!-- SCENE -->
-		<h3 id="menu_scene"><span data-i18n="tb.scene_opt"></span></h3>
+		<h3 id="menu_scene" data-tut="twelfth-step"><span data-i18n="tb.scene_opt"></span></h3>
 		<div class="pv-menu-list">
 
 			<div id="scene_export"></div>
@@ -117,7 +117,7 @@
 		</div>
 
 		<!-- Classification -->
-		<h3 id="menu_filters"><span data-i18n="tb.filters_opt"></span></h3>
+		<h3 id="menu_filters" data-tut="thirteenth-step"><span data-i18n="tb.filters_opt"></span></h3>
 		<div>
 
 			<div class="divider"><span>Classification</span></div>
