--- a/public/potree_libs/potree/sidebar.html
+++ b/public/potree_libs/potree/sidebar.html
@@ -128,7 +128,7 @@
       </div>
 
       <!-- SCENE -->
-      <h3 id="menu_scene" data-tut="twelfth-step">
+      <h3 id="menu_scene" data-tut="thirteenth--step">
         <span data-i18n="tb.scene_opt"></span>
       </h3>
       <div class="pv-menu-list">
@@ -140,7 +140,7 @@
       </div>
 
       <!-- Classification -->
-      <h3 id="menu_filters" data-tut="thirteenth-step">
+      <h3 id="menu_filters" data-tut="fourteenth-step">
         <span data-i18n="tb.filters_opt"></span>
       </h3>
       <div>
