one more step added

--- a/public/potree_libs/potree/sidebar.html
+++ b/public/potree_libs/potree/sidebar.html
@@ -128,7 +128,7 @@
       </div>
 
       <!-- SCENE -->
-      <h3 id="menu_scene" data-tut="thirteenth--step">
+      <h3 id="menu_scene" data-tut="thirteenth-step">
         <span data-i18n="tb.scene_opt"></span>
       </h3>
       <div class="pv-menu-list">
